--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,7 @@
 @import 'components/forms';
 @import 'components/buttons';
 @import 'components/notifications';
+@import 'components/switcher';
 
 // Theme common styles.
 @import 'header/header';
