--- a/src/scss/components/buttons.scss
+++ b/src/scss/components/buttons.scss
@@ -18,10 +18,12 @@
 	text-align: center;
 	font-family: $ff;
 	font-size: $fs-sm;
+	font-weight: $fw-regular;
 	line-height: $lh-2;
 	color: $very-dark-green;
 	border: none;
 	border-radius: $radius-input;
+	padding: 0;
 	transition: background-color ease-out $tr;
 	cursor: pointer;
 
@@ -169,6 +171,14 @@
 		}
 	}
 
+	&.tab {
+		width: 135px;
+		height: 44px;
+		border-radius: 8px;
+		background-color: transparent;
+		transition: color ease-out $tr
+	}
+
 	&:disabled {
 		background-color: $disabled;
 		color: $disabled-text;
@@ -186,4 +196,3 @@
 		height: auto
 	}
 }
-
