--- a/src/scss/components/buttons.scss
+++ b/src/scss/components/buttons.scss
@@ -179,6 +179,24 @@
 		transition: color ease-out $tr
 	}
 
+	&.icon {
+		width: 48px;
+		height: 48px;
+		background-color: transparent;
+		border-radius: 10px;
+		border: 1px solid;
+
+		img, svg {
+			display: block;
+			width: 20px;
+			height: 20px
+		}
+
+		&.delete {
+			border-color: rgba(247, 65, 65, 0.6)
+		}
+	}
+
 	&:disabled {
 		background-color: $disabled;
 		color: $disabled-text;
