--- a/src/scss/pages/profile-memories.scss
+++ b/src/scss/pages/profile-memories.scss
@@ -10,5 +10,90 @@
 }
 
 .profile-memories {
-	height: 100%
+	height: 100%;
+
+	&-list {
+		margin-top: 32px
+	}
+}
+
+.memory-preview {
+	width: 100%;
+	padding: 24px 30px 42px;
+	background-color: $white;
+	border-radius: 30px;
+	color: $very-dark-green;
+
+	&:not(:last-child) {
+		margin-bottom: 24px
+	}
+
+	&-top {
+		padding-bottom: 24px;
+		border-bottom: 1px solid rgba(195, 218, 226, 0.24)
+	}
+
+	&-page {
+		column-gap: 12px;
+
+		&-thumb {
+			width: 48px;
+			height: 48px;
+			border-radius: 50%;
+			overflow: hidden;
+
+			img {
+				width: 100%;
+				height: 100%;
+				object-fit: cover
+			}
+		}
+
+		&-name {
+			font-family: $ff-title;
+			font-size: $fs-lg;
+			line-height: $lh-1;
+			font-weight: $fw-semibold
+		}
+	}
+
+	&-actions {
+		column-gap: 12px
+	}
+
+	&-thumb {
+		width: 80px;
+		height: 80px;
+		margin-top: 24px;
+
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+			border-radius: $radius-input
+		}
+	}
+
+	&-text {
+		font-family: $ff-title;
+		font-size: $fs-lg;
+		line-height: $lh-1;
+		font-weight: $fw-semibold;
+		padding: 0 64px;
+		margin: 24px 0;
+		text-align: center
+	}
+
+	&-fullname {
+		line-height: $lh-3;
+		text-align: center;
+		margin-bottom: 4px
+	}
+
+	&-role {
+		font-size: 15px;
+		line-height: $lh-5;
+		text-align: center;
+		color: rgba(5, 51, 48, 0.4)
+	}
 }
