--- a/src/scss/components/vars.scss
+++ b/src/scss/components/vars.scss
@@ -65,6 +65,10 @@ $light-green-blue	: #D3EFF9;
 $bright-light-green	: #DCF6FF;
 $black				: #001211;
 
+$bg-disabled: rgba(5, 51, 48, 0.05);
+$alpha-black-30: rgba(47, 43, 67, 0.3);
+$text-secondary: rgba(5, 51, 48, 0.4);
+
 // Colors - Error/Hint.
 $error-primary		: #D83B01;
 $error-secondary	: #E9C4B7;
