upd: start new approach in the styles.

--- a/src/scss/components/vars.scss
+++ b/src/scss/components/vars.scss
@@ -15,7 +15,7 @@ $container-xl: calc(1280px + $container-padding * 2);
 
 // Font families.
 $ff			: 'Grafita-Normal', Arial, sans-serif;
-$ff-title	: 'Calvino-Grande', Arial, sans-serif;
+$ff-title	: 'Calvino Grande', Arial, sans-serif;
 
 // Font sizes.
 $fs-xs	: 12px;
