--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,7 @@
 // Theme components.
 @import 'components/fonts';
 @import 'components/vars';
+@import 'components/vars/vars';	// New vars
 @import 'components/helpers';
 @import 'components/grid';
 @import 'components/typography';
@@ -9,6 +10,7 @@
 @import 'components/base';
 @import 'components/forms';
 @import 'components/buttons';
+@import 'components/buttons/buttons';	// New buttons
 @import 'components/notifications';
 @import 'components/switcher';
 
