--- a/src/scss/components/buttons.scss
+++ b/src/scss/components/buttons.scss
@@ -154,23 +154,6 @@
 		border-radius: 24px
 	}
 
-	&.profile-nav {
-		width: 100%;
-		gap: 10px;
-		justify-content: flex-start;
-		font-size: $fs-md;
-		line-height: $lh-2;
-		color: $light-green;
-		padding: 24px;
-		border: 1px solid rgba(195, 218, 226, 0.24);
-		transition: border-color ease-out $tr;
-
-		svg {
-			display: block;
-			width: 16px
-		}
-	}
-
 	&.tab {
 		width: 135px;
 		height: 44px;
@@ -214,3 +197,5 @@
 		height: auto
 	}
 }
+
+@import 'buttons/buttons';
