--- a/src/scss/components/vars/_colors.scss
+++ b/src/scss/components/vars/_colors.scss
@@ -1,6 +1,17 @@
-$accent					: #F7B941;
-$accent-on-color		: #C69A39;
-$accent-on-color-hover	: #AE8429;
-$accent-on-color-pressed: #936E1A;
-$accent-04				: rgba(247, 185, 65, 0.40);
-$bg-disabled			: rgba(5, 51, 48, 0.05);
+$accent						: #F7B941;
+$accent-on-color			: #C69A39;
+$accent-on-color-hover		: #AE8429;
+$accent-on-color-pressed	: #936E1A;
+$accent-04					: rgba(247, 185, 65, 0.40);
+$bg-disabled				: rgba(5, 51, 48, 0.05);
+
+$border-accent-on-color		: $accent-on-color;
+$border-primary-on-color	: rgba(195, 218, 226, 0.24);
+
+$bg-primary-on-color-hover	: rgba(195, 218, 226, 0.08);
+
+$text-primary				: #011C1A;
+$text-primary-on-color		: #C3DAE2;
+$text-accent-on-color		: $accent-on-color;
+
+$icon-accent-on-color		: $accent-on-color;
