--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,6 @@
 // Theme components.
 @import 'components/fonts';
 @import 'components/vars';
-@import 'components/vars/vars';	// New vars
 @import 'components/helpers';
 @import 'components/grid';
 @import 'components/typography';
@@ -10,7 +9,6 @@
 @import 'components/base';
 @import 'components/forms';
 @import 'components/buttons';
-@import 'components/buttons/buttons';	// New buttons
 @import 'components/notifications';
 @import 'components/switcher';
 
@@ -20,3 +18,7 @@
 @import 'header/profile';
 @import 'footer/footer';
 @import 'footer/menu';
+
+// New Components styles.
+@import 'components/menu/menu';
+@import 'components/socials/socials';
