--- a/src/scss/components/menu/_sidebar.scss
+++ b/src/scss/components/menu/_sidebar.scss
@@ -10,7 +10,7 @@
 			}
 
 			a {
-				@extend .button, .button-menu, .button-icon-lead, .button-icon-tail
+				@extend .button, .button-menu, .button-icon-lead
 			}
 		}
 	}
