--- a/src/scss/components/vars/_colors.scss
+++ b/src/scss/components/vars/_colors.scss
@@ -1,17 +1,29 @@
+$accent-bright				: #FFF851;
 $accent						: #F7B941;
 $accent-on-color			: #C69A39;
 $accent-on-color-hover		: #AE8429;
 $accent-on-color-pressed	: #936E1A;
 $accent-04					: rgba(247, 185, 65, 0.40);
-$bg-disabled				: rgba(5, 51, 48, 0.05);
+
+$light-pink					: #C3A195;
 
 $border-accent-on-color		: $accent-on-color;
 $border-primary-on-color	: rgba(195, 218, 226, 0.24);
 
+$bg-secondary				: #011C1A;
+$bg-primary					: #F7FAFC;
+$bg-primary-hover			: $border-primary-on-color;
+$bg-primary-pressed			: rgba(195, 218, 226, 0.40);
 $bg-primary-on-color-hover	: rgba(195, 218, 226, 0.08);
+$bg-primary-on-color-pressed: rgba(195, 218, 226, 0.12);
+$bg-disabled				: rgba(5, 51, 48, 0.05);
 
-$text-primary				: #011C1A;
+$text-accent				: $accent;
+$text-primary				: $bg-secondary;
 $text-primary-on-color		: #C3DAE2;
 $text-accent-on-color		: $accent-on-color;
+$text-disabled				: rgba(5, 51, 48, 0.30);
 
+$icon-accent				: $accent;
 $icon-accent-on-color		: $accent-on-color;
+$icon-disabled-on-color		: $border-primary-on-color;
