upd: profile memories page - no memories.

--- a/src/scss/pages/profile-memories.scss
+++ b/src/scss/pages/profile-memories.scss
@@ -7,6 +7,15 @@
 	.wrapper {
 		overflow: visible
 	}
+
+	.profile-memories.none {
+		height: auto;
+		margin-top: 100px;
+
+		@media (min-width: $lg) {
+			margin-top: 223px
+		}
+	}
 }
 
 .profile-memories {
