--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,7 @@
 // Theme base styles.
 @import 'components/base';
 @import 'components/forms';
+@import 'components/inputs/inputs';
 @import 'components/buttons';
 @import 'components/notifications';
 @import 'components/switcher/switcher';
