upd: steps inputs.

--- a/src/scss/components/buttons/buttons.scss
+++ b/src/scss/components/buttons/buttons.scss
@@ -2,6 +2,7 @@
 @import 'sizes';
 @import 'icons';
 @import 'primary';
+@import 'outlined';
 @import 'menu';
 @import 'dark-mode';
 @import 'switch';
