--- a/src/scss/new-memory/step-3.scss
+++ b/src/scss/new-memory/step-3.scss
@@ -26,7 +26,8 @@
 			background-color: transparent;
 			border: none;
 			resize: none;
-			padding: 0
+			padding: 0;
+			box-shadow: none
 		}
 	}
 }
