--- a/src/scss/components/buttons/_button.scss
+++ b/src/scss/components/buttons/_button.scss
@@ -15,6 +15,7 @@
 	transition:
 		background-color ease-out $tr,
 		border-color ease-out $tr,
+		box-shadow ease-out $tr,
 		color ease-out $tr;
 	cursor: pointer;
 
