feat: delete memory.
- add popup for publication & deletion;
- improved AJAX no-memories logic.

--- a/src/scss/components/buttons/buttons.scss
+++ b/src/scss/components/buttons/buttons.scss
@@ -1,8 +1,10 @@
 @import 'button';
 @import 'sizes';
 @import 'icons';
+@import 'icon';
 @import 'primary';
 @import 'outlined';
 @import 'menu';
 @import 'dark-mode';
 @import 'info';
+@import 'negative';
