--- a/src/scss/components/vars/_fonts.scss
+++ b/src/scss/components/vars/_fonts.scss
@@ -1,6 +1,13 @@
 $ff			: 'Grafita-Normal', Arial, sans-serif;
 $ff-title	: 'Calvino Grande', Arial, sans-serif;
 
+$fs-xs		: 12px;
+$fs-sm		: 14px;
+$fs-sm-alt	: 15px;
+$fs-md		: 16px;
+$fs-lg		: 18px;
+$fs-xl		: 20px;
+
 $fw-regular	: 400;
 $fw-medium	: 500;
 $fw-semibold: 600;
