--- a/src/scss/components/vars/_colors.scss
+++ b/src/scss/components/vars/_colors.scss
@@ -32,6 +32,7 @@ $text-disabled				: $border-primary;
 $icon-accent				: $accent;
 $icon-accent-on-color		: $accent-on-color;
 $icon-primary				: $bg-secondary;
+$icon-danger				: $text-danger;
 $icon-secondary				: rgba(5, 51, 48, 0.4);
 $icon-disabled				: rgba(5, 51, 48, 0.3);
 $icon-disabled-on-color		: $border-primary-on-color;
